# uptime-watch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: config.example.yml
tests/: test_checker.py  test_notifier.py  test_storage.py
uptime_watch/: __init__.py  checker.py  cli.py  notifier.py  status_page.py  storage.py
