[project]
name = "uptime-watch"
version = "0.1.0"
description = "Multi-service HTTP uptime monitoring with alerting and a static status page."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.scripts]
uptime-watch = "uptime_watch.cli:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["uptime_watch*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
